add simple websocket integration

--- a/popup.html
+++ b/popup.html
@@ -35,14 +35,16 @@
 
   <body>
     <h1>Tab Boss</h1>
-    <div id="debug"></div>
     <div id="container">
       <span style="margin-right: 1rem;">Pick a tab</span>
-      <select style="margin-right: 1rem;" id="dropdown"></select>
+      <select style="margin-right: 1rem; max-width: 240px;" id="dropdown"></select>
       <input id="checkbox" type="checkbox">
     </div>
     <div>
       <input style="width: 40px;" type="number" id="number">s
+    </div>
+    <div>
+      <input type="text" id="text">
     </div>
   </body>
 </html>
