excess closing tags

--- a/popup.html
+++ b/popup.html
@@ -53,8 +53,7 @@
 		</div>
 		<div class="field">
 			<label for="rotation-interval">Tab rotation interval (seconds)</label>
-			<input id="rotation-interval" type="number" style="width: 40px;">
-		</div>
+			<input id="rotation-interval" type="number" style="width: 40px;" />
 		</div>
 		<div class="field">
 			<label for="rotation-toggle">Tab rotation toggle</label>
@@ -62,8 +61,7 @@
 		</div>
 		<div class="field">
 			<label for="socket-url">Socket URL</label>
-			<input id="socket-url" type="text">
-		</div>
+			<input id="socket-url" type="text" />
 		</div>
 		<div class="field">
 			<label for="socket-secret">Socket secret</label>
@@ -71,8 +69,7 @@
 		</div>
 		<div class="field">
 			<label for="socket-toggle">Socket toggle</label>
-			<input id="socket-toggle" type="checkbox">
-		</div>
+			<input id="socket-toggle" type="checkbox" />
 		</div>
 		<div class="field">
 			<label>Socket last report</label>
