add a nice little lie

--- a/popup.html
+++ b/popup.html
@@ -60,6 +60,9 @@
 			<input id="rotation-toggle" type="checkbox">
 		</div>
 		<div class="field">
+			<p><em>Tab rotation paused while menu is open</em></p>
+		</div>
+		<div class="field">
 			<label for="socket-url">Socket URL</label>
 			<input id="socket-url" type="text" />
 		</div>
