--- a/popup.html
+++ b/popup.html
@@ -75,7 +75,7 @@
 		<h2>Web Socket</h2>
 		<div class="field">
 			<label for="socket-url">Socket URL</label>
-			<input id="socket-url" type="text" />
+			<input id="socket-url" type="text" placeholder="ws://" />
 		</div>
 		<div class="field">
 			<label for="socket-secret">Socket secret</label>
